@@ -30,6 +30,7 @@ Bugfixes:
 - Fixed #654 ContextLoggingListener for Logback 0.9.17
 - Fixed #631 Memory leak using IServiceCapableConnection.invoke
 - Fixed #638 Flash Lite 3.0 conneting with RED5 (invalid)
+- Fixed #657 Timestamp corruption in recorded .flv, when stream also subscribed
 
 Red5 0.8.0 (2009-06-04)
 -----------------------
